--- a/css/style.css
+++ b/css/style.css
@@ -28,64 +28,38 @@ ul {
     margin: 0;
     padding-left: 0;
 }
-
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 /* HEADER */
 .header {
-    padding: 24px 0;
+    padding: 18px 0;
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
     background: #fff;
 }
-
 .container {
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
-
-
-}
-
-.container.container-header {
+    max-width: 320px;
+     padding: 0 16px;
+     margin: 0 auto;
+   }
+.container-header{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
-.nav-header {
-    display: flex;
-    align-items: center;
+.list-header, .address-header{
+    display: none;
 }
-
-.list-header {
-    display: flex;
-    gap: 40px;
-}
-
-
-
-
-
-.link-header {
-    padding: 24px 0;
-    font-weight: 500;
-    line-height: 1.5;
-    color: #2e2f42;
-    letter-spacing: 0.32px;
-}
-
-.list-address {
-    display: flex;
-    gap: 40px;
-}
-
-.item-header {
-
-    line-height: 1.5;
-
-    letter-spacing: 0.32px;
-}
-
-
 span {
     color: #2e2f42;
 
@@ -102,246 +76,91 @@ span {
     text-transform: uppercase;
     color: #4d5ae5;
 }
-
-.link-header:hover {
-    color: #404BBF;
+.menu-burger-btn{
+    fill:#2f2f37;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    line-height: 0;
 }
-
-.link-header:focus {
-    color: #404bbf;
-}
-
-.active {
-    position: relative;
-    color: #404bbf;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.active::after {
-    content: "";
-    position: absolute;
-    display: block;
+/* MOBILE MENU */
+.mobile-menu{
+    
+    position: fixed;
+    top:0;
+    left:0;
     width: 100%;
-    height: 4px;
-    background-color: #404BBF;
-    left: 0;
-    bottom: -1px;
-    border-radius: 2px;
-
+    height: 100px;
+    z-index: 99999999999;
+    background-color: #FFFFFF;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
-address {
-    font-style: normal;
+.mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
 }
-
-.address-mail {
-    color: #434455;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.mobile-menu-container{
+    position: relative;
+    padding: 72px 0px 40px 0px;
 }
-
-.address-mail:hover {
-    color: #404bbf;
-}
-
-.address-mail:focus {
-    color: #404bbf;
-}
-
-/* <!-- SECTION-1 --> */
-/* main  */
-/* benefits */
-
-.benefits {
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url(../images/people-office.jpg);
-    max-width: 1440px;
-    background-size: cover;
-    background-color: #2E2F42;
-    padding: 188px 0;
-    text-align: center;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin: 0 auto;
-
-}
-
-.container-benefits {
-    /* text-align: center; */
-    /* margin: 0 auto; */
-}
-
-.title-main {
-
-    color: #fff;
-    font-size: 56px;
-    font-weight: 700;
-    max-width: 496px;
-    letter-spacing: 1.12px;
-    line-height: 1.07;
-    margin: 0 auto;
-}
-
-.icon-border {
-    background-color: #f4f4fd;
-    border: 1px solid #8e8f99;
-    border-radius: 4px;
-    width: 264px;
-    margin-bottom: 8px;
-    height: 112px;
+.mobile-menu-close-btn {
+    border: none;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    fill: #2e2f42;
+    width: 24px;
+    height: 24px;
+    line-height: 0;
+    padding: 0;
+    position: absolute;
+    top: 24px;
+    right: 16px;
+    
     display: flex;
     justify-content: center;
     align-items: center;
-
-
-
-}
-
-.button-main {
-    display: block;
-    min-width: 169px;
-    background-color: #4D5AE5;
-    color: #fff;
-    font-family: Roboto;
-    font-weight: 500;
-    margin-top: 48px;
-    letter-spacing: 0.64px;
-    cursor: pointer;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    border: none;
-    border-radius: 4px;
-    height: 56px;
-    margin: 0 auto;
-    margin-top: 48px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-button:hover {
-    background-color: #404BBF;
-}
-
-button:focus {
-    background-color: #404BBF;
+    background-color:transparent; 
+    border: 1px solid rgba(0, 0, 0, 0.1); 
 }
 
 
-
-/* section-2
-content */
-.content {
-    padding: 120px 0;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
-.list-content {
+.mobile-menu-list{
+    margin-bottom: 168px;
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    gap: 40px;
 }
-
-.content-item {
-    width: calc((100% - 72px) / 4);
+.mobile-menu-link{
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11111;
+letter-spacing: 0.02em;
+color: #2e2f42;
 }
-
-.title-content {
-    margin-bottom: 8px;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    letter-spacing: 0.4px;
-    color: #2e2f42;
+.active{
+    color: #404bbf;
 }
-
-.target-txt {
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
-
-/* <!-- SECTION-3 --> */
-/* our-time */
-
-.our-time {
-    text-align: center;
-    background-color: #F4F4FD;
-    padding: 120px 0;
-
-}
-
-.title-timee {
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    background-color: #F4F4FD;
-    color: #2e2f42;
-    margin-bottom: 72px;
-
-
-}
-
-.list {
-    background-color: #F4F4FD;
+.mobile-menu-list-address{
     display: flex;
+    flex-direction: column;
+    margin-bottom: 48px;
     gap: 24px;
-}
-
-.list-time {
-    background-color: #FFFFFF;
-    width: calc((100% - 72px) / 4);
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.person {
-    padding: 32px 0;
-
 
 }
-
-.title-time {
-    text-align: center;
-    margin-bottom: 8px;
+.mobile-menu-address-link{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-}
-
-.job {
-
     color: #434455;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
-    text-align: center;
-    font-size: 16px;
-    margin-bottom: 8px;
 }
-
-
-
-.Our-time p {
-
-    font-size: 16px;
-    color: #434455;
-    letter-spacing: 0.32px;
+.active-address{
+    color: #4d5ae5;
 }
-
 .icon-cocial-link {
     border-radius: 50%;
     background-color: #4d5ae5;
@@ -352,16 +171,9 @@ content */
     align-items: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.icon-cocial-link:hover,
-.icon-cocial-link:focus {
-    background-color: #404bbf;
-}
-
 .list-social {
     display: flex;
-    gap: 24px;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .icon-cocial {
@@ -376,485 +188,30 @@ content */
     align-items: center;
     gap: 24px;
 }
-
-
-/* <!-- SECTION-4 --> */
-
-/* Our Portfolio */
-
-.our-portfolio {
-    padding-top: 120px;
-    padding-bottom: 120px;
+@media only screen and (min-width: 768px) {
+    .container{
+    max-width: 768px;
+    }
+    .menu-burger-btn{
+        display: none;
+    }
+    .mobile-menu-close-btn {
+        display: none;
+    }
 }
-
-.title-portfolio {
-    color: #2E2F42;
-    text-align: center;
-    line-height: 1.2;
-    font-size: 36px;
-    margin-bottom: 72px;
-    font-weight: 700;
-
-    letter-spacing: 0.72px;
-    text-transform: capitalize;
-}
-
-
-.list-port {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
-}
-
-.item-add {
-    width: calc((100% - 48px) / 3);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.item-add:hover,
-.item-add:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.item-add:hover .text-card {
-
-    transform: translateY(0%);
-
-}
-
-.addition {
-    padding: 32px 16px;
-    border: 1px solid #e7e9fc;
-    border-top: none;
-}
-
-.title-portf {
-    color: #2E2F42;
-    margin-bottom: 8px;
-
-    font-size: 20px;
-    line-height: 1.2;
-    font-weight: 500;
-    letter-spacing: 0.4px;
-}
-
-.content-portf {
-    color: #434455;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
-
-.container-our-portfolio {
-    overflow: hidden;
-    position: relative;
-}
-
-.text-card {
-    position: absolute;
-    top: 0;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;
-    padding: 40px 32px;
-    background-color: #4d5ae5;
-    height: 100%;
-    width: 100%;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translateY(100%);
-}
-
-/* FOOTER */
-.container-footer {
-    display: flex;
-
-    align-items: baseline;
-}
-
-.footer-contact {
-    margin-right: 120px;
-}
-
-.list-footer {
-    display: flex;
-    gap: 16px;
-}
-
-.item-footer {
-    width: 40px;
-    height: 40px;
-}
-
-.contact {
-    background-color: #2E2F42;
-    padding: 100px 0;
-
-}
-
-
-.logo-footer {
-    display: inline-block;
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    color: #2E2F42;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-    background-color: #2E2F42;
-    margin-bottom: 16px;
-}
-
-.studio {
-    color: #f4f4fd;
-    background-color: #2E2F42;
-}
-
-.content-footer {
-
-    color: #F4F4FD;
-    background-color: #2E2F42;
-    line-height: 1.5;
-    max-width: 264px;
-
-    letter-spacing: 0.32px;
-
-}
-
-.social {
-    /* font-family: "Roboto", sans-serif; */
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #fff;
-    margin-bottom: 16px;
-}
-
-.social-link-footer {
-    display: flex;
-    gap: 16px;
-}
-
-.footer-link:hover,
-.footer-link:focus {
-    background-color: #31d0aa;
-}
-
-.subscribe {
-
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #fff;
-    margin-bottom: 16px; 
-
-}
-
-.subscribe-form {
-    margin-left: 80px;
-
-
-}
-
-.subscribe-input {
-    border: 1px solid #fff;
-    border-radius: 4px;
-    width: 264px;
-    height: 40px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    border: 1px solid #ffffff; 
-    /* background: #2e2f42; */
-    background-color: transparent;
-    font-size: 12px; 
-    line-height: 2; 
-    letter-spacing: 0.04em;
-    padding-left: 16px; 
-    color: #ffffff;
-}
-
-.subscribe-input::placeholder {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    padding-left: 16px;
-}
-
-.subscribe-btn {
-   
-    border-radius: 4px;
-    padding: 8px 24px;
-    min-width: 165px;
-    height: 40px;
-    background: #4d5ae5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    cursor: pointer;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em ;
-    color: #ffffff;
-}
-
-
-
-.email-svg {
-    fill: white;
-    display: block;
-    margin-left: 16px;
-}
-
-.footer-form {
-    display: flex;
+@media only screen and (min-width: 1158px) {
+    .header {
+        padding: 24px 0;
+        border-bottom: 1px solid #e7e9fc;
+        box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+        background: #fff;
+    }
     
-    align-items: center;
+    .container {
+    max-width: 1158px;
+    padding: 0 15px;
+    }
     
-    gap: 24px;
-}
-
-/* MODAL */
-.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url(../images/Overlay.png);
-    z-index: 999999999;
-    opacity: 0;
-    visibility: hidden;
-    background-color: rgba(46, 47, 66, 0.4);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-
-.backdrop.is-open {
-    opacity: 1;
-    visibility: visible;
-}
-
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 408px;
-    min-height: 584px; 
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-    background: #fcfcfc;
-    border-radius: 4px;
-    padding: 72px 24px 24px 24px;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-
-.modal-close-btn {
-    border: none;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    fill: #2e2f42;
-    width: 24px;
-    height: 24px;
-    line-height: 0;
-    padding: 0;
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #e7e9fc; 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-    border: 1px solid rgba(0, 0, 0, 0.1); 
-}
-
-.modal-close-btn:hover,
-.modal-close-btn:focus {
-    fill: #ffff;
-    border: none; 
-}
-.modal-close-icon{
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-
-.modal-txt {
-
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    margin-bottom: 16px;
-}
-
-
-.modal-btn {
-
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    text-align: center;
-    color: #fff;
-    border-radius: 4px;
-    padding: 16px 32px;
-    min-width: 169px;
-    height: 56px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    background: #4d5ae5;
-    cursor: pointer;
-    border: none;
-    display: block;
-    margin: 0 auto;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-block {
-    margin-bottom: 8px;
-
-}
-
-.modal-form-input {
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    width: 100%;
-    height: 40px;
-    background-color: transparent;
-    padding-left: 38px;
-    transition: border-color 250ms linear;
-    outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-
-.modal-form-input:focus {
-    border-color: #4d5ae5;
-    outline: transparent;
-}
-.modal-form-block-textarea{
-    margin-bottom: 16px;
-}
-
-.modal-form-textarea {
-    width: 100%;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    background-color: transparent;
-    height: 120px;
-    resize: none;
-    padding: 8px 16px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16667;
-    letter-spacing: 0.04em;
     
-    line-height: 1.17; 
-    color: rgba(46, 47, 66, 0.4);
-    outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
-}
-
-.modal-form-textarea:focus {
-    border-color: #4d5ae5;
-    outline: transparent;
-    transition: fill 250ms linear;
-    transition: border-color 250ms linear;
-}
-
-.modal-form-textarea::placeholder {
-
-    color: rgba(46, 47, 66, 0.4);
-}
-
-.modal-form-input:focus+.icon {
-    fill: #4d5ae5;
-}
-
-.modal-form-label {
-    display: block;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16667;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
-    margin-bottom: 4px;
-    line-height: 1.17; 
-
-}
-
-.input-block {
-    position: relative;
-}
-
-.icon {
-    position: absolute;
-    left: 16px;
-    top: 50%;
-    transform: translateY(-50%);
-    fill: #2e2f42;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-}
-
-.modal-form-checkbox {
-    margin-bottom: 24px;
-}
-
-.modal-checkbox:checked + .user-privacy-label .checkbox-span {
-    background-color: #404bbf;
-    fill: #F4F4FD; 
-    border: none; 
-}
-.user-privacy-label{
-line-height: 1.17;  
-font-weight: 400;
-font-size: 12px;
-letter-spacing: 0.04em;
-color: #8e8f99; 
-}
-
-.modal-checkbox:focus+.privacy-policy-label .checkbox-span {
-    outline: 1px solid #404bbf;
-}
-
-.privacy-policy-label {
-
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16667;
-    letter-spacing: 0.04em;
-    color: #8e8f99;
-
-}
-
-.checkbox-link {
-    line-height: 1.33;
-    text-decoration: underline;
-    text-decoration-skip-ink: none;
-    color: #4d5ae5;
-}
-
-.checkbox-span {
-
-    border-radius: 2px;
-    fill: transparent;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 8px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
