--- a/css/style.css
+++ b/css/style.css
@@ -40,49 +40,6 @@ ul {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-/* HEADER */
-.header {
-    padding: 18px 0;
-    border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
-    background: #fff;
-}
-.container {
-    max-width: 320px;
-     padding: 0 16px;
-     margin: 0 auto;
-   }
-.container-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.list-header, .address-header{
-    display: none;
-}
-span {
-    color: #2e2f42;
-
-}
-
-.logo {
-    font-family: "Raleway", sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    margin-right: 76px;
-    color: #2E2F42;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-}
-.menu-burger-btn{
-    fill:#2f2f37;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    line-height: 0;
-}
 /* MOBILE MENU */
 .mobile-menu{
     
@@ -188,6 +145,50 @@ color: #2e2f42;
     align-items: center;
     gap: 24px;
 }
+/* ====================HEADER============================*/
+.header {
+    padding: 18px 0;
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+    background: #fff;
+}
+.container {
+    max-width: 320px;
+     padding: 0 16px;
+     margin: 0 auto;
+   }
+.container-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.list-header, .address-header{
+    display: none;
+}
+span {
+    color: #2e2f42;
+
+}
+
+.logo {
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    margin-right: 76px;
+    color: #2E2F42;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+.menu-burger-btn{
+    fill:#2f2f37;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    line-height: 0;
+}
+/* ====================================================== */
 @media only screen and (min-width: 768px) {
     .container{
     max-width: 768px;
@@ -198,6 +199,120 @@ color: #2e2f42;
     .mobile-menu-close-btn {
         display: none;
     }
+    .list-header, .address-header{
+        display: block;
+    }
+    .header {
+        padding: 16px 0;
+        border-bottom: 1px solid #e7e9fc;
+        box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+        background: #fff;
+    }
+    .container.container-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .logo{
+        margin-right: 120px;
+    }
+    
+    .nav-header {
+        display: flex;
+        align-items: center;
+    }
+    
+    .list-header {
+        display: flex;
+        gap: 40px;
+    }
+    
+    
+    
+    
+    
+    .link-header {
+        padding: 24px 0;
+        font-weight: 500;
+        line-height: 1.5;
+        color: #2e2f42;
+        letter-spacing: 0.32px;
+        font-size: 16px;
+    }
+    
+    /* .list-address {
+        display: flex;
+        gap: 40px;
+    } */
+    
+    .item-header {
+        line-height: 1.5;
+        letter-spacing: 0.32px;
+    }
+    
+    
+    span {
+        color: #2e2f42;
+    
+    }
+    
+    /* .logo {
+        font-family: "Raleway", sans-serif;
+        font-size: 18px;
+        font-weight: 700;
+        margin-right: 76px;
+        color: #2E2F42;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #4d5ae5;
+    } */
+    
+    /* .link-header:hover {
+        color: #404BBF;
+    } */
+    
+    /* .link-header:focus {
+        color: #404bbf;
+    } */
+    
+    .active {
+        position: relative;
+        color: #404bbf;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    
+    .active::after {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: #404BBF;
+        left: 0;
+        bottom: -1px;
+        border-radius: 2px;
+    
+    }
+    
+    address {
+        font-style: normal;
+    }
+    
+    .address-mail {
+        color: #434455;
+        font-size: 12px;
+        /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    }
+    
+    /* .address-mail:hover {
+        color: #404bbf;
+    }
+    
+    .address-mail:focus {
+        color: #404bbf;
+    }
+         */
 }
 @media only screen and (min-width: 1158px) {
     .header {
