--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,7 @@ span {
 }
 
 .address-mail{
+    font-size: 16px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .address-mail:hover {
