--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ ul {
     width: 100%;
     height: 100px;
     z-index: 99999999999;
-    background-color: #FFFFFF;
     opacity: 0;
     visibility: hidden;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -64,7 +63,9 @@ ul {
 
 .mobile-menu-container {
     position: relative;
-    padding: 72px 0px 40px 0px;
+    background-color: #FFFFFF;
+
+    
 }
 
 .mobile-menu-close-btn {
@@ -94,6 +95,8 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 40px;
+    padding: 72px 0px 40px 0px;
+
 }
 
 .mobile-menu-link {
@@ -160,27 +163,21 @@ ul {
 /* ====================HEADER============================*/
 .header {
     padding: 18px 0;
-    border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+    border-bottom: none;
+    box-shadow: none;
     background: #fff;
 }
 
-.container {
-    max-width: 320px;
-    padding: 0 16px;
-    margin: 0 auto;
-}
+
 
 .container-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 auto;
 }
 
-.list-header,
-.address-header {
-    display: none;
-}
+
 
 span {
     color: #2e2f42;
@@ -199,13 +196,26 @@ span {
     color: #4d5ae5;
 }
 
-.menu-burger-btn {
-    fill: #2f2f37;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    line-height: 0;
+
+@media only screen and (max-width: 768px) {
+    .container {
+        max-width: 320px;
+        padding: 0 16px;
+        margin: 0 auto;
+    }
+    .list-header,
+    .address-header {
+        display: none;
+    }
+    .menu-burger-btn {
+        fill: #2f2f37;
+        border: none;
+        background-color: transparent;
+        padding: 0;
+        line-height: 0;
+    }
 }
+
 
 /* =====HEADER 768============================ */
 @media only screen and (min-width: 768px) {
@@ -233,7 +243,7 @@ span {
         background: #fff;
     }
 
-    .container.container-header {
+   .container-header {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -274,10 +284,7 @@ span {
     }
 
 
-    span {
-        color: #2e2f42;
-
-    }
+   
 
 
 
@@ -322,26 +329,21 @@ span {
 @media only screen and (min-width: 1158px) {
     .header {
         padding: 24px 0;
-        border-bottom: 1px solid #e7e9fc;
-        box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
-        background: #fff;
+        
     }
 
     .container {
         max-width: 1158px;
         padding: 0 15px;
     }
-    .header {
-        padding: 24px 0;
-        border-bottom: 1px solid #e7e9fc;
-        box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
-        background: #fff;
+    
 
 
-}
+
 .list-address {
     display: flex;
-    gap: 40px;
+    flex-direction: row;
+    
 }
 .logo{
     margin-right: 76px;
@@ -391,3 +393,10 @@ span {
     margin: 0 auto;
 
 }
+
+
+
+
+
+
+
