--- a/css/desktop-style.css
+++ b/css/desktop-style.css
@@ -166,8 +166,8 @@ address {
 }
 
 .container-benefits {
-    /* text-align: center; */
-    /* margin: 0 auto; */
+    text-align: center;
+    margin: 0 auto;
 }
 
 .title-main {
