--- a/css/style.css
+++ b/css/style.css
@@ -169,10 +169,11 @@ ul {
 
 /* ====================HEADER============================*/
 
+
 .container-header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
     margin: 0 auto;
 }
 
@@ -326,7 +327,7 @@ span {
         
     }
 
-    .container {
+    .container.container-header  {
         max-width: 1158px;
         padding: 0 15px;
     }
@@ -380,7 +381,7 @@ span {
     max-width: 320px;
     background-size: cover;
     background-color: #2E2F42;
-    padding: 72px 52px ;
+    padding: 72px 0px ;
     text-align: center;
     background-repeat: no-repeat;
     background-position: center;
@@ -397,7 +398,7 @@ span {
         color: #fff;
         font-size: 36px;
         font-weight: 700;
-        max-width: 496px;
+        max-width: 216px;
         letter-spacing: 1.12px;
         line-height: 1.1;
         margin: 0 auto;
@@ -413,7 +414,7 @@ margin-bottom: 72px;
         color: #fff;
         font-family: Roboto;
         font-weight: 500;
-        margin-top: 48px;
+        /* margin-top: 48px; */
         letter-spacing: 0.64px;
         cursor: pointer;
         font-family: "Roboto", sans-serif;
@@ -424,7 +425,7 @@ margin-bottom: 72px;
         border-radius: 4px;
         height: 56px;
         margin: 0 auto;
-        margin-top: 48px;
+        /* margin-top: 48px; */
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     button:hover {
@@ -451,7 +452,7 @@ margin-bottom: 72px;
     }
     .benefits{
     max-width: 768px; 
-    padding: 112px 136px ;
+    padding: 112px 0px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(../images/Dark-bg-tabl.jpg), url(../images/Dark-bg-tabl-2.jpg);
 }
@@ -460,8 +461,12 @@ margin-bottom: 72px;
     font-size: 56px;
     letter-spacing: 0.02em;
     max-width: 496px;
-    margin-bottom: 36px;
+  
+    font-weight: 700;
+    margin: 0 auto;
+    margin-bottom: 52px;
 }
+
 }
 
 
@@ -482,6 +487,17 @@ margin-bottom: 72px;
     max-width: 1440px;
     
     padding: 188px 0;
+    }
+    .title-main {
+
+        
+        font-size: 56px;
+        
+        max-width: 496px;
+        letter-spacing: 1.12px;
+        line-height: 1.07;
+        margin-bottom: 48px;
+        
     }
 }
 
