--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,7 @@ span {
     background-repeat: no-repeat;
     background-position: center;
     margin: 0 auto;
+    
 }
 .container-benefits {
     text-align: center;
@@ -425,7 +426,7 @@ margin-bottom: 72px;
         border-radius: 4px;
         height: 56px;
         margin: 0 auto;
-        /* margin-top: 48px; */
+        
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     button:hover {
@@ -508,4 +509,33 @@ margin-bottom: 72px;
 
 }
 
+/* ============SECTION-2 ==================== */
+.content{
+    padding: 96px 0;
+}
 
+.icon-border{
+    display: none;
+}
+.list-content{
+    display: flex;
+    flex-direction: column;
+    gap:72px;
+}
+.title-content{
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11111;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+margin-bottom: 8px;
+}
+.target-txt {
+    font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+max-width: 288px;
+}
