--- a/css/style.css
+++ b/css/style.css
@@ -662,3 +662,48 @@ button:focus {
 }
 
 /* ============SECTION 3============================== */
+.our-time {
+    text-align: center;
+    background-color: #F4F4FD;
+    padding: 96px 0;
+
+}
+.title-timee {
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    background-color: #F4F4FD;
+    color: #2e2f42;
+    margin-bottom: 72px;
+    
+  
+}
+.list {
+    background-color: #F4F4FD;
+    display: flex;
+    flex-direction: column;
+    column-gap: 72px;
+    
+}
+.list-time {
+    background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.person {
+    padding: 32px 0;
+}
+
+/* =====SECTION-3 768 */
+@media only screen and (min-width:768px) {
+
+}
+
+
+
+/* =====SECTION-3 1158 */
+@media only screen and (min-width:1158px) {
+
+}
