--- a/css/style.css
+++ b/css/style.css
@@ -830,3 +830,61 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 }
+.list-port {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.item-add {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+
+.item-add:hover,
+.item-add:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item-add:hover .text-card {
+
+    transform: translateY(0%);
+
+}
+
+/* =====SECTION-4 768=============== */
+@media only screen and (min-width:768px) {
+
+    .item-add {
+        width: calc((100% - 24px) / 2);
+        
+    }
+}
+
+/* =====SECTION-4 1158=============== */
+@media only screen and (min-width:1158px) {
+    .item-add{ 
+    max-width: calc((100% - 48px) / 3);
+    }
+    .container-our-portfolio {
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .text-card {
+        position: absolute;
+        top: 0;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+        padding: 40px 32px;
+        background-color: #4d5ae5;
+        height: 100%;
+        width: 100%;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translateY(100%);
+    }
+}
