--- a/css/style.css
+++ b/css/style.css
@@ -871,6 +871,7 @@ color: #434455;
     .container-our-portfolio {
         overflow: hidden;
         position: relative;
+        cursor: pointer;
     }
     
     .text-card {
@@ -886,5 +887,9 @@ color: #434455;
         width: 100%;
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         transform: translateY(100%);
+        display: block;
+    }
+    .addition{
+        cursor: pointer;
     }
 }
