--- a/css/style.css
+++ b/css/style.css
@@ -1105,3 +1105,259 @@ flex-direction: row;
     
    
 }
+
+/* MODAL============================ */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/Overlay.png);
+    z-index: 999999999;
+    opacity: 0;
+    visibility: hidden;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 288px;
+    min-height: 623px; 
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background: #fcfcfc;
+    border-radius: 4px;
+    padding: 72px 24px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.modal-close-btn {
+    border: none;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    fill: #2e2f42;
+    width: 24px;
+    height: 24px;
+    line-height: 0;
+    padding: 0;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #e7e9fc; 
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    border: 1px solid rgba(0, 0, 0, 0.1); 
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+    fill: #ffff;
+    border: none; 
+}
+.modal-close-icon{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.modal-txt {
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+
+
+.modal-btn {
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    border-radius: 4px;
+    padding: 16px 32px;
+    min-width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
+    cursor: pointer;
+    border: none;
+    display: block;
+    margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-block {
+    margin-bottom: 8px;
+
+}
+
+.modal-form-input {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    padding-left: 38px;
+    transition: border-color 250ms linear;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.modal-form-input:focus {
+    border-color: #4d5ae5;
+    outline: transparent;
+}
+.modal-form-block-textarea{
+    margin-bottom: 16px;
+}
+
+.modal-form-textarea {
+    width: 100%;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    height: 120px;
+    resize: none;
+    padding: 8px 16px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    
+    line-height: 1.17; 
+    color: rgba(46, 47, 66, 0.4);
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+}
+
+.modal-form-textarea:focus {
+    border-color: #4d5ae5;
+    outline: transparent;
+    transition: fill 250ms linear;
+    transition: border-color 250ms linear;
+}
+
+.modal-form-textarea::placeholder {
+
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-form-input:focus+.icon {
+    fill: #4d5ae5;
+}
+
+.modal-form-label {
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
+    line-height: 1.17; 
+
+}
+
+.input-block {
+    position: relative;
+}
+
+.icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.modal-form-checkbox {
+    margin-bottom: 24px;
+}
+
+.modal-checkbox:checked + .user-privacy-label .checkbox-span {
+    background-color: #404bbf;
+    fill: #F4F4FD; 
+    border: none; 
+}
+.user-privacy-label{
+line-height: 1.17;  
+font-weight: 400;
+font-size: 12px;
+letter-spacing: 0.04em;
+color: #8e8f99; 
+}
+
+.modal-checkbox:focus+.privacy-policy-label .checkbox-span {
+    outline: 1px solid #404bbf;
+}
+
+.privacy-policy-label {
+
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+
+}
+
+.checkbox-link {
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+
+.checkbox-span {
+
+    border-radius: 2px;
+    fill: transparent;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* =====MODAL 768=============== */
+
+@media only screen and (min-width:768px)
+{
+    .modal{
+        width: 408px;
+        min-height: 584px; 
+    }
+}
+/* =====MODAL 1158=============== */
+
+@media only screen and (min-width:1156px)
+{
+    .modal{
+       width: 408px;
+       
+    }
+}
