--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ ul {
         top: 0;
         left: 0;
         width: 100%;
-        height: 100px;
+        
         z-index: 99999999999;
         opacity: 0;
         visibility: hidden;
@@ -65,9 +65,21 @@ ul {
     .mobile-menu-container {
         position: relative;
         background-color: #FFFFFF;
+display: flex;
+flex-direction: column;
+/* flex-wrap: wrap; */
+flex-basis: auto;
+height: 100vh;
+overflow-y: auto;
+padding: 72px;
+padding: 40px;
+
 
 
     }
+   
+    
+    
 
     .mobile-menu-close-btn {
         border: none;
@@ -138,12 +150,12 @@ ul {
         width: 40px;
         height: 40px;
         display: flex;
-        justify-content: center;
+        justify-content:center;
         align-items: center;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    .list-social {
+    .list-social-mob {
         display: flex;
         justify-content: space-between;
     }
@@ -156,7 +168,7 @@ ul {
 
     .cocial-link {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         gap: 24px;
     }
@@ -172,7 +184,8 @@ ul {
 
 .container {
     max-width: 320px;
-    padding: 0 16px;
+    padding-left:  16px;
+    padding-right: 16px;
     margin: 0 auto;
 }
 
@@ -403,7 +416,7 @@ span {
 /* benefits */
 .benefits {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-        url(../images/Dark-bg-mob.jpg), url(../images/Dark-bg-mobi.jpg);
+        url(../images/Dark-bg-mob.jpg);
     max-width: 320px;
     background-size: cover;
     background-color: #2E2F42;
