--- a/css/style.css
+++ b/css/style.css
@@ -71,8 +71,8 @@ flex-direction: column;
 flex-basis: auto;
 height: 100vh;
 overflow-y: auto;
-padding: 72px;
-padding: 40px;
+padding-top: 72px;
+padding-bottom: 40px;
 
 
 
@@ -108,8 +108,7 @@ padding: 40px;
         display: flex;
         flex-direction: column;
         gap: 40px;
-        padding: 72px 0px 40px 0px;
-
+        
     }
 
     .mobile-menu-link {
