subscribe-btn-margin

--- a/css/style.css
+++ b/css/style.css
@@ -1032,7 +1032,7 @@ button:focus {
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     opacity: 0.3;
     background: #2e2f42;
-    margin-bottom: 16px;
+    
     
 
 }
@@ -1062,7 +1062,7 @@ button:focus {
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;
-    margin: 0 auto 0 auto;
+    margin: 16px auto 0 auto;
 
 }
 
